--- a/profile.css
+++ b/profile.css
@@ -2,6 +2,7 @@ body{
     margin: 0;
     color:black;
     text-shadow:2px 2px 4px #000000;
+    font-family: 'Electrolize', sans-serif;
 }
 main{
   background-image: url(pictures/36.jpg);
@@ -9,7 +10,7 @@ main{
   display: flex;
   flex-direction: row;
   width: 100%;
-  height:50vw;
+  height:52vw;
 }
 #personal{
   border-radius: 2vw;
@@ -27,7 +28,7 @@ a>img{
   width: 2vw;
 }
 #right{
-  margin-top: 4vw;
+  margin-top: 2vw;
   margin-right: 2vw;
   width: 30%;
   text-align: center;
@@ -41,17 +42,37 @@ a>img{
   margin-top: 4vw;
   margin-left: 2vw;
   width: 40%;
-  height:40vw;
+  height:45vw;
   border-radius: 1vw;
   border-style:groove;
+}
+#right>h2{
+  color: green;
+  font-size: 2.5vw;
+  /* font-family: 'Quantico', sans-serif; */
+  font-family: 'Courgette', cursive;
+
+}
+#right>h3{
+  color: red;
+}
+#right>p{
+  color: #000;
+  font-size: 1.1vw;
+  /* font-family: 'VT323', monospace; */
+  font-family: 'Courgette', cursive;
 }
 #left>h3{
   letter-spacing: 5px;
   text-align: center;
   font-size: 2vw;
+  background-color: rgba(100, 125, 150, 0.5);
+  color: red;
+
 }
 #left>p{
   position: absolute;
+  margin-left: 0.8vw;
   top :10vw;
   width: 30vw;
   letter-spacing: 3px;
@@ -59,6 +80,9 @@ a>img{
   display: none;
   padding: 1vw;
   font-size: 1.5vw;
+  background-color: rgba(100, 125, 150, 0.9);
+  background-position: center;
+  color: white;
 }
 #left>p:first-of-type{
   display: block;
