--- a/profile.css
+++ b/profile.css
@@ -12,7 +12,7 @@ main{
   width: 100%;
   height:52vw;
 }
-#personal{
+#personal_pic{
   border-radius: 2vw;
   border-style:groove;
 }
@@ -21,24 +21,23 @@ span>img{
   width: 6vw;
   border-radius: 1vw;
   border-style:groove;
-
 }
 a>img{
   height:2vw;
   width: 2vw;
 }
-#right{
+#section_right{
   margin-top: 2vw;
   margin-right: 2vw;
   width: 30%;
   text-align: center;
 }
-#mid{
+#section_mid{
   margin-top: 4vw;
   margin-left: 2vw;
   width: 40%;
 }
-#left{
+#section_left{
   margin-top: 4vw;
   margin-left: 2vw;
   width: 40%;
@@ -46,31 +45,29 @@ a>img{
   border-radius: 1vw;
   border-style:groove;
 }
-#right>h2{
+#section_right>h2{
   color: green;
   font-size: 2.5vw;
   /* font-family: 'Quantico', sans-serif; */
   font-family: 'Courgette', cursive;
-
 }
-#right>h3{
+#section_right>h3{
   color: red;
 }
-#right>p{
+#section_right>p{
   color: #000;
   font-size: 1.1vw;
   /* font-family: 'VT323', monospace; */
   font-family: 'Courgette', cursive;
 }
-#left>h3{
+#section_left>h3{
   letter-spacing: 5px;
   text-align: center;
   font-size: 2vw;
   background-color: rgba(100, 125, 150, 0.5);
   color: red;
-
 }
-#left>p{
+.workExper_paragraph{
   position: absolute;
   margin-left: 0.8vw;
   top :10vw;
@@ -84,8 +81,28 @@ a>img{
   background-position: center;
   color: white;
 }
-#left>p:first-of-type{
+.workExper_paragraph:first-of-type{
   display: block;
+}
+.change{
+  display: block;
+}
+button{
+  position: absolute;
+  top:50vw;
+  background-color:white;
+  color: red;
+  font-weight: bold;
+  width: 5vw;
+  border-radius: 1vw;
+  font-family: 'Electrolize', sans-serif;
+}
+#nextButt{
+  left:30vw;
+}
+#backButt{
+  left:3vw;
+  width: 10vw;
 }
 span:hover{
 cursor: pointer;
