--- a/profile.css
+++ b/profile.css
@@ -11,7 +11,7 @@ main{
   display: flex;
   flex-direction: row;
   width: 100%;
-  height:52vw;
+  height:50vw;
 }
 #personal_pic{
   border-radius: 2vw;
@@ -61,6 +61,8 @@ a>img{
   color: white;
   text-shadow:1px 1px 2px lightblue;
   font-size: 1.1vw;
+  width: 100%;
+  height:11vw;
   /* font-family: 'VT323', monospace; */
   font-family: 'Courgette', cursive;
 }
@@ -72,7 +74,7 @@ a>img{
   letter-spacing: 5px;
   text-align: center;
   font-size: 2vw;
-  background-color: rgba(100, 125, 150, 0.5);
+  background-color: rgba(125, 125, 125, 0.5);
   color: red;
 }
 .workExper_paragraph{
@@ -84,7 +86,7 @@ a>img{
   display: none;
   padding: 1vw;
   font-size: 1.5vw;
-  background-color: rgba(100, 125, 150, 0.6);
+  background-color: rgba(125, 125, 125, 0.6);
   background-position: center;
   color: white;
 }
@@ -96,14 +98,19 @@ a>img{
 }
 button{
   position: absolute;
-  top:48vw;
-  background-color:rgba(100, 125, 150, 0.4);
-  color: red;
+  top:9vw;
+  background-color:rgba(125, 125, 125, 0.4);
+  color: blue;
   text-shadow:1px 1px 2px #000000;
   font-weight: bold;
   width: 5vw;
   border-radius: 1vw;
   font-family: 'Electrolize', sans-serif;
+}
+button:hover{
+  cursor:crosshair;
+  background-color: darkgrey;
+  color: white;
 }
 #nextButt{
   left:30vw;
@@ -135,7 +142,6 @@ margin-left: 10vw;
 span:last-of-type{
 margin-left: 15vw;
 }
-
 .onthefly{
   background: rgba(0, 0, 0, 0.6);
   display:flex;
