--- a/profile.css
+++ b/profile.css
@@ -1,19 +1,113 @@
+html {
+  scroll-behavior: smooth;
+}
 body{
     margin: 0;
-    color:black;
     text-shadow:2px 2px 4px #000000;
     font-family: 'Electrolize', sans-serif;
 }
-main{
-  background-image: url(pictures/36.jpg);
-  background-repeat: no-repeat;
-  background-size:cover;
-  display: flex;
-  flex-direction: row;
+@keyframes startImg {
+0% {
+  opacity:0;
+  transform: translateY(-5rem);
+}
+100% {
+  opacity:1;
+  transform: none;
+}
+}
+#startPage{
+  animation: startImg 1.5s ease-out forwards;
+  background:url(./pictures/lap.jpeg) no-repeat bottom;
+  background-size: cover;
+  position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+  height:49vw;
   width: 100%;
-  height:50vw;
+  text-align: center;
+}
+#Wellcom{
+margin-top: 5vw;
+margin-right: 40vw;
+color:#150303;
+}
+#Wellcom:hover{
+  font-size: 3.2vw;
+  transition: 0.2s linear;
+  color:#842525;
+  cursor:zoom-in;
+}
+#startName{
+margin-right: 40vw;
+color:#150303;
+}
+#startName:hover{
+font-size: 2.2vw;
+transition: 0.4s linear;
+color:#842525;
+cursor:zoom-in;
+}
+#startPergh{
+margin-right: 40vw;
+}
+#startPergh:hover{
+font-size: 1.5vw;
+transition: 0.8s linear;
+color:#842525;
+cursor:zoom-in;
+}
+#startButton{
+margin-right: 40vw;
+width:10vw;
+height: 3vw;
+background-color: black;
+border-radius: 1vw;
+color: white;
+font-size: 1vw;
+font-family:Courgette;
+ }
+#startButton:hover{
+  background-color: #640B0B;
+  color: black;
+  cursor: pointer;
+  }
+#contact{
+  display: flex;
+  margin-top: 5vw;
+  }
+#contact>a{
+  margin-right: 2vw;
+  }
+#contact>a:first-of-type{
+  margin-left: 20vw;
+  }
+#contact>a:hover{
+  animation: none;
+  }
+#mainPage{
+  display:flex;
+  flex-direction:column;
+  width: 100%;
+  animation: startImg 0.5s ease-out forwards;
+  margin-top: 48vw;
+
+}
+.contain{
+  display: flex;
+  justify-content: space-between;
+  background-image: url(pictures/photo22.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100%;
+  height: 55vw;
+  margin-top: 1vw;
 }
 #personal_pic{
+  width: 15vw;
+  height:15vw;
   border-radius: 2vw;
   border-style:groove;
 }
@@ -29,42 +123,48 @@ a>img{
 }
 #section_right{
   margin-top: 2vw;
-  margin-right: 2vw;
   width: 30%;
   text-align: center;
 }
-#section_mid{
-  margin-top: 2vw;
-  margin-left: 2vw;
-  width: 40%;
+#skills{
+  background-image: url(pictures/photo8.jpg);
+  background-repeat: no-repeat;
+  background-size:cover;
+  width: 100%;
+  height:45vw;
+  display: flex;
+  flex-direction: column;
+  padding-bottom: 2vw;
+}
+#skills>div{
+  display: flex;
 }
 #section_left{
   margin-top: 2vw;
   margin-left: 2vw;
   width: 40%;
-  height:45vw;
-  border-radius: 1vw;
-  border-style:groove;
+  height:40vw;
 }
 #section_right>h2{
-  color: darkblue;
+  color: #622255;
   text-shadow:2px 2px 4px white;
   font-size: 2.5vw;
-  /* font-family: 'Quantico', sans-serif; */
   font-family: 'Courgette', cursive;
+  margin-top: 2vw;
 }
 #section_right>h3{
-  color: red;
+  color: #842525;
   text-shadow:1px 1px 2px white;
 }
 #section_right>p{
-  color: white;
+  color: #262424;
   text-shadow:1px 1px 2px lightblue;
   font-size: 1.1vw;
   width: 100%;
   height:11vw;
-  /* font-family: 'VT323', monospace; */
   font-family: 'Courgette', cursive;
+  padding-top: 5vw;
+  margin-top: 3vw;
 }
 #section_right>a{
   margin-right: 1vw;
@@ -74,76 +174,49 @@ a>img{
   letter-spacing: 5px;
   text-align: center;
   font-size: 2vw;
-  background-color: rgba(125, 125, 125, 0.5);
-  color: red;
+  /* background-color: rgba(125, 125, 125, 0.5); */
+  color: #842525;
 }
 .workExper_paragraph{
-  position: absolute;
-  margin-left: 0.8vw;
-  top :10vw;
-  width: 30vw;
+  margin-left:2vw;
+  width: 35vw;
   letter-spacing: 3px;
   display: none;
   padding: 1vw;
   font-size: 1.5vw;
   background-color: rgba(125, 125, 125, 0.6);
   background-position: center;
-  color: white;
+  color: #262424;
 }
 .workExper_paragraph:first-of-type{
   display: block;
 }
-.change{
-  display: block;
-}
-button{
-  position: absolute;
-  top:9vw;
-  background-color:rgba(125, 125, 125, 0.4);
-  color: blue;
-  text-shadow:1px 1px 2px #000000;
-  font-weight: bold;
-  width: 5vw;
-  border-radius: 1vw;
-  font-family: 'Electrolize', sans-serif;
-}
-button:hover{
-  cursor:crosshair;
-  background-color: darkgrey;
-  color: white;
-}
-#nextButt{
-  left:30vw;
-}
-#backButt{
-  left:3vw;
-  width: 10vw;
-}
+
 span:hover{
 cursor: pointer;
 }
+span>img{
+  height:5vw;
+  width: 5vw;
+}
 span>img:hover{
-  height:9vw;
-  width: 9vw;
+  height:7vw;
+  width: 7vw;
   transition:0.2s linear ;
 }
 span:first-of-type{
-margin-left: 15vw;
+margin-left: 27vw;
 }
-span:nth-of-type(2){
-margin-left: 10vw;
+span{
+margin-top: 8vw;
+margin-left: 2.5vw;
 }
-span:nth-of-type(3){
-margin-left: 5vw;
-}
-span:nth-of-type(4){
-margin-left: 10vw;
-}
-span:last-of-type{
-margin-left: 15vw;
+.secoundRowSpan{
+margin-top: 3vw;
 }
 .onthefly{
   background: rgba(0, 0, 0, 0.6);
+  animation: startImg 0.7s ease-out forwards;
   display:flex;
   flex-direction: column;
   justify-content: center;
@@ -157,7 +230,7 @@ margin-left: 15vw;
 }
 .onthefly > h1{
   font-family: 'Electrolize', sans-serif;
-  color: red;
+  color: #842525;
 }
 .onthefly > img{
   height: 80%;
@@ -165,13 +238,19 @@ margin-left: 15vw;
 }
 .onthefly > span {
   position: absolute;
-  top: 2vw;
-  right: 1vw;
+  top: -5vw;
+  right: 15vw;
   font-size: 3vw;
   color: white;
 }
-
 .onthefly > span:hover {
   cursor: pointer;
 }
+footer{
+  display: flex;
+  padding-top:2vw;
+  padding-bottom: 2vw;
+  justify-content: center;
+  text-align: center;
+  background: black;
 }
