--- a/profile.css
+++ b/profile.css
@@ -4,7 +4,8 @@ html {
 body{
     margin: 0;
     text-shadow:2px 2px 4px #000000;
-    font-family: 'Electrolize', sans-serif;
+   
+    font-family: 'Orbitron', sans-serif;
 }
 @keyframes startImg {
 0% {
@@ -25,91 +26,97 @@ body{
     right: 0;
     bottom: 0;
     left: 0;
-  height:49vw;
+  height:51vw;
   width: 100%;
   text-align: center;
+  font-family: 'Orbitron', sans-serif;
 }
 #Wellcom{
-margin-top: 5vw;
-margin-right: 40vw;
-color:#150303;
+  margin-top: 3vw;
+  margin-right: 42vw;
 }
 #Wellcom:hover{
   font-size: 3.2vw;
   transition: 0.2s linear;
-  color:#842525;
+  color:whitesmoke;
   cursor:zoom-in;
 }
-#startName{
-margin-right: 40vw;
-color:#150303;
-}
-#startName:hover{
-font-size: 2.2vw;
-transition: 0.4s linear;
-color:#842525;
-cursor:zoom-in;
+#personal_pic{
+  width: 10vw;
+  height:10vw;
+  border-radius:50%;
+  border-style: none;
+  margin-top: 1vw;
+  margin-left: 23vw;
+  margin-bottom: 1vw; 
+  opacity: 0.5;
+  background-image: url(pictures/n.jpg);
+  background-repeat: no-repeat;
+  background-size:cover;
 }
 #startPergh{
-margin-right: 40vw;
+  margin-right: 42vw;
+   color:rgb(196, 139, 5);
 }
 #startPergh:hover{
-font-size: 1.5vw;
-transition: 0.8s linear;
-color:#842525;
-cursor:zoom-in;
+  font-size: 1.5vw;
+  transition: 0.8s linear;
+  color:whitesmoke;
+  cursor:zoom-in;
+}
+#startDescription{
+  margin-right: 40vw;
+}
+#startDescription:hover{ 
+  font-size: 1.5vw;
+  transition: 0.8s linear;
+  color:white;
+  cursor:zoom-in;
 }
 #startButton{
-margin-right: 40vw;
-width:10vw;
-height: 3vw;
-background-color: black;
-border-radius: 1vw;
-color: white;
-font-size: 1vw;
-font-family:Courgette;
- }
+  margin-right: 42vw;
+  margin-top: 3vw;
+  width:10vw;
+  height: 3vw;
+  background-color: black;
+  border-radius: 0.5vw;
+  color: white;
+  font-size: 1vw;
+}
 #startButton:hover{
-  background-color: #640B0B;
+  background-color: rgb(196, 139, 5);
   color: black;
   cursor: pointer;
-  }
+}
 #contact{
   display: flex;
   margin-top: 5vw;
-  }
+  margin-bottom: 2vw;
+}
 #contact>a{
-  margin-right: 2vw;
-  }
+  margin-right: 4vw;
+}
 #contact>a:first-of-type{
   margin-left: 20vw;
-  }
+}
 #contact>a:hover{
   animation: none;
-  }
+}
 #mainPage{
   display:flex;
   flex-direction:column;
   width: 100%;
   animation: startImg 0.5s ease-out forwards;
-  margin-top: 48vw;
-
+  margin-top: 50vw;
+  font-family: 'Orbitron', sans-serif;
 }
 .contain{
-  display: flex;
-  justify-content: space-between;
-  background-image: url(pictures/photo22.jpg);
+  background-image: url(pictures/background1.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   width: 100%;
-  height: 55vw;
+  height: 65vw;
   margin-top: 1vw;
-}
-#personal_pic{
-  width: 15vw;
-  height:15vw;
-  border-radius: 2vw;
-  border-style:groove;
 }
 span>img{
   height:6vw;
@@ -121,17 +128,12 @@ a>img{
   height:2vw;
   width: 2vw;
 }
-#section_right{
-  margin-top: 2vw;
-  width: 30%;
-  text-align: center;
-}
 #skills{
   background-image: url(pictures/photo8.jpg);
   background-repeat: no-repeat;
   background-size:cover;
   width: 100%;
-  height:45vw;
+  height:53vw;
   display: flex;
   flex-direction: column;
   padding-bottom: 2vw;
@@ -139,80 +141,69 @@ a>img{
 #skills>div{
   display: flex;
 }
-#section_left{
+#section_carousel{
   margin-top: 2vw;
-  margin-left: 2vw;
-  width: 40%;
-  height:40vw;
+  margin-left: 55vw;
+  width: 50%;
+  
 }
-#section_right>h2{
-  color: #622255;
-  text-shadow:2px 2px 4px white;
-  font-size: 2.5vw;
-  font-family: 'Courgette', cursive;
-  margin-top: 2vw;
-}
-#section_right>h3{
-  color: #842525;
-  text-shadow:1px 1px 2px white;
-}
-#section_right>p{
-  color: #262424;
-  text-shadow:1px 1px 2px lightblue;
-  font-size: 1.1vw;
-  width: 100%;
-  height:11vw;
-  font-family: 'Courgette', cursive;
-  padding-top: 5vw;
-  margin-top: 3vw;
-}
-#section_right>a{
-  margin-right: 1vw;
-  border-style: dotted;
-}
-#section_left>h3{
+#section_carousel>h3{
+  margin-bottom: 3vw;
+  margin-top: 5vw;
+  margin-right: 10vw;
   letter-spacing: 5px;
   text-align: center;
   font-size: 2vw;
-  /* background-color: rgba(125, 125, 125, 0.5); */
-  color: #842525;
+  font-size: bold;
+  color: rgb(196, 139, 5);
 }
 .workExper_paragraph{
   margin-left:2vw;
   width: 35vw;
+  height: 52vw;
   letter-spacing: 3px;
   display: none;
   padding: 1vw;
   font-size: 1.5vw;
   background-color: rgba(125, 125, 125, 0.6);
   background-position: center;
-  color: #262424;
+  color: white;
 }
 .workExper_paragraph:first-of-type{
   display: block;
 }
 
 span:hover{
-cursor: pointer;
+  cursor: pointer;
 }
-span>img{
+#certHeader{
+  margin-top: 2vw;
+  letter-spacing: 5px;
+  text-decoration: underline;
+  text-shadow:2px 2px 4px rgb(36, 35, 35);
+  font-size: 2vw;
+  align-self: center;
+  transition: 0.2s linear;
+  color: rgb(196, 139, 5);
+}
+span>img {
   height:5vw;
   width: 5vw;
 }
-span>img:hover{
+span>img:hover {
   height:7vw;
   width: 7vw;
   transition:0.2s linear ;
 }
 span:first-of-type{
-margin-left: 27vw;
+  margin-left: 25vw;
 }
 span{
-margin-top: 8vw;
-margin-left: 2.5vw;
+  margin-top: 3vw;
+  margin-left: 2.5vw;
 }
 .secoundRowSpan{
-margin-top: 3vw;
+  margin-top: 3vw;
 }
 .onthefly{
   background: rgba(0, 0, 0, 0.6);
@@ -236,6 +227,10 @@ margin-top: 3vw;
   height: 80%;
   width:50% ;
 }
+.onthefly > embed{
+  height: 80%;
+  width:50% ;
+}
 .onthefly > span {
   position: absolute;
   top: -5vw;
@@ -246,11 +241,52 @@ margin-top: 3vw;
 .onthefly > span:hover {
   cursor: pointer;
 }
+
+.contact{
+  padding: 4%;
+  
+}
+.col-md-3{
+  background: rgb(196, 139, 5);
+  color: white;
+  padding: 4%;
+  border-top-left-radius: 0.5rem;
+  border-bottom-left-radius: 0.5rem;
+}
+.contact-info{
+  margin-top:10%;
+}
+.contact-info img{
+  margin-bottom: 15%;
+}
+.contact-info h2{
+  margin-bottom: 10%;
+}
+.col-md-9{
+  background: rgb(255, 255, 255);
+  padding: 3%;
+  border-top-right-radius: 0.5rem;
+  border-bottom-right-radius: 0.5rem;
+}
+.contact-form label{
+  font-weight:600;
+}
+.contact-form button{
+  background: rgb(196, 139, 5);
+  color: white;
+  font-weight: 600;
+  width: 25%;
+}
+.contact-form button:focus{
+  box-shadow:none;
+}
+
 footer{
-  display: flex;
+  
   padding-top:2vw;
   padding-bottom: 2vw;
   justify-content: center;
   text-align: center;
-  background: black;
+  background: rgb(52, 58, 64);
+  color: #494444;
 }
